--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "d3-scale": "^3.2.2",
     "d3-scale-chromatic": "^2.0.0",
     "deck.gl": "^8.2.7",
+    "protobufjs": "^6.10.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-map-gl": "^5.2.10",
