update to latest deps

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "d3-scale": "^3.2.2",
     "d3-scale-chromatic": "^2.0.0",
     "deck.gl": "^8.2.7",
-    "protobufjs": "^6.10.2",
-    "react": "^16.6.0",
+    "protobufjs": "^7.1.2",
+    "react": "^18.2.0",
     "react-dom": "^16.6.0",
     "react-map-gl": "^5.2.10",
-    "react-scripts": "^4.0.0",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1",
     "recharts": "^1.8.5",
     "source-map-explorer": "^2.5.0"
   },
