--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3-scale": "^3.2.2",
     "d3-scale-chromatic": "^2.0.0",
     "mapbox-gl": "^2.10.0",
+    "papaparse": "^5.3.2",
     "protobufjs": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^17.0.0",
@@ -30,7 +31,12 @@
     "extends": "react-app"
   },
   "browserslist": [
-    ">0.2%", "not dead", "not ie 11", "not chrome < 51", "not safari < 10", "not android < 51"
+    ">0.2%",
+    "not dead",
+    "not ie 11",
+    "not chrome < 51",
+    "not safari < 10",
+    "not android < 51"
   ],
   "devDependencies": {
     "simplify-geojson": "^1.0.3"
