--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3-scale": "^3.2.2",
     "d3-scale-chromatic": "^2.0.0",
     "mapbox-gl": "^2.10.0",
+    "ml-regression-simple-linear": "^2.0.3",
     "papaparse": "^5.3.2",
     "protobufjs": "^7.1.2",
     "react": "^18.2.0",
