--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "GAVoteseFrontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,24 +7,23 @@
     "@deck.gl/layers": "^8.8.15",
     "@deck.gl/mapbox": "^8.8.15",
     "@deck.gl/react": "^8.8.15",
-    "antd": "^4.7.0",
+    "antd": "^5.0.1",
     "d3-scale": "^3.2.2",
     "d3-scale-chromatic": "^2.0.0",
     "mapbox-gl": "^2.10.0",
     "ml-regression-simple-linear": "^2.0.3",
     "papaparse": "^5.3.2",
-    "protobufjs": "^7.1.2",
     "react": "^18.2.0",
-    "react-dom": "^17.0.0",
+    "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
-    "react-scripts": "^5.0.1",
-    "recharts": "^2.1.15",
-    "source-map-explorer": "^2.5.0"
+    "react-router-dom": "^6.4.3",
+    "recharts": "^2.1.15"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
+    "buildESB": "esbuild src/index.jsx --outdir=dist --asset-names=assets/[name]-[hash] --bundle --minify --sourcemap --target=es2020 --external:react --analyze",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,6 +39,11 @@
     "not android < 51"
   ],
   "devDependencies": {
-    "simplify-geojson": "^1.0.3"
+    "@vitejs/plugin-react": "^2.2.0",
+    "esbuild": "^0.15.15",
+    "react-scripts": "^5.0.1",
+    "simplify-geojson": "^1.0.3",
+    "source-map-explorer": "^2.5.3",
+    "vite": "^3.2.4"
   }
 }
