--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
     "react-router-dom": "^6.4.3",
-    "recharts": "^2.1.15"
+    "recharts": "^2.1.15",
+    "temporal-polyfill": "^0.0.8"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
