--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ml-regression-simple-linear": "^2.0.3",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
     "react-router-dom": "^6.4.3",
