--- a/package.json
+++ b/package.json
@@ -41,11 +41,10 @@
     "not android < 51"
   ],
   "devDependencies": {
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "esbuild": "^0.15.15",
-    "react-scripts": "^5.0.1",
     "simplify-geojson": "^1.0.3",
     "source-map-explorer": "^2.5.3",
-    "vite": "^3.2.4"
+    "vite": "^4.0.0"
   }
 }
