--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "start": "vite",
     "build": "vite build",
     "buildESB": "esbuild src/index.jsx --outdir=dist --asset-names=assets/[name]-[hash] --bundle --minify --sourcemap --target=es2020 --external:react --analyze",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,8 +43,11 @@
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.0.0",
     "esbuild": "^0.15.15",
+    "jsdom": "^20.0.3",
+    "msw": "^0.49.1",
     "simplify-geojson": "^1.0.3",
     "source-map-explorer": "^2.5.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "^0.25.7"
   }
 }
