--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "temporal-polyfill": "^0.0.8"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "analyze": "source-map-explorer 'build/assets/*.js'",
     "start": "vite",
     "build": "vite build",
     "buildESB": "esbuild src/index.jsx --outdir=dist --asset-names=assets/[name]-[hash] --bundle --minify --sourcemap --target=es2020 --external:react --analyze",
@@ -43,8 +43,16 @@
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.0.0",
     "esbuild": "^0.15.15",
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^20.0.3",
     "msw": "^0.49.1",
+    "prettier": "^2.8.1",
     "simplify-geojson": "^1.0.3",
     "source-map-explorer": "^2.5.3",
     "vite": "^4.0.0",
