--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   ],
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/coverage-c8": "^0.25.7",
     "esbuild": "^0.15.15",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
