--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -28,4 +28,4 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn run build
-    - run: yarn run test
+    - run: yarn run test:ci
