--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -26,6 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn install
+    - run: yarn install --frozen-lockfile
     - run: yarn run build
     - run: yarn run test:ci
