--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
+        # cache: 'yarn'
     - run: yarn install --frozen-lockfile
     - run: yarn run build
     - run: yarn run test:ci
