--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -27,5 +27,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         # cache: 'yarn'
     - run: yarn install --frozen-lockfile
+    - run: yarn run buildESB
     - run: yarn run build
     - run: yarn run test:ci
