--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -5,11 +5,10 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -18,18 +17,18 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-    - run: yarn install --frozen-lockfile
-    - run: yarn run buildESB
-    - run: yarn run build
-    - run: yarn run test:ci
-    - name: Archive Build Outputs
-      uses: actions/upload-artifact@v3
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "yarn"
+      - run: yarn install --frozen-lockfile
+      - run: yarn run buildESB
+      - run: yarn run build
+      - run: yarn run test:ci
+      - name: Archive Build Outputs
+        uses: actions/upload-artifact@v3
         with:
           name: build
           path: build/
