--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,3 +49,6 @@ jobs:
       - name: Copy files to the test website with the AWS CLI
         run: |
           aws s3 sync . s3://georgiavotesvisual-latest
+      - name: Update Cloudfront Distro
+        run: |
+          aws cloudfront create-invalidation --distribution-id E3PTAV7LNU8JS2 --paths "/*"
