Remove lint issues and test updated perms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "CTYNAME",
         "datapoint",
         "mapbox",
-        "papaparse"
+        "papaparse",
+        "pickable",
+        "Scatterplot",
+        "wireframe"
     ]
 }
