update iam role

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Configure AWS credentials for latest
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::123871754011:role/github-build
+          role-to-assume: arn:aws:iam::123871754011:role/github-build-gavotesfrontend
           aws-region: us-east-1
       - name: Copy files to the test website with the AWS CLI
         run: |
