--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@
 
 name: Deploy to Latest
 
-on:
-  workflow_call
+on: workflow_call
 
 jobs:
   deploy:
@@ -35,7 +34,6 @@ jobs:
             });
             let fs = require('fs');
             fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/build.zip`, Buffer.from(download.data));
-
       - name: "Unzip artifact"
         run: unzip build.zip
       - name: Configure AWS credentials for latest
