--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,27 +15,10 @@ jobs:
       contents: read
     steps:
       - name: "Download artifact"
-        uses: actions/github-script@v6
+        uses: actions/download-artifact@master
         with:
-          script: |
-            let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: context.payload.workflow_run.id,
-            });
-            let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
-              return artifact.name == "build"
-            })[0];
-            let download = await github.rest.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            let fs = require('fs');
-            fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/build.zip`, Buffer.from(download.data));
-      - name: "Unzip artifact"
-        run: unzip build.zip
+          name: build
+          path: build/
       - name: Configure AWS credentials for latest
         uses: aws-actions/configure-aws-credentials@v1
         with:
