--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
     "source-map-explorer": "^2.5.3",
     "vite": "^4.0.0",
     "vitest": "^0.26.0"
-  }
+  },
+  "packageManager": "yarn@3.3.1"
 }
