--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -25,7 +25,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
-      - run: yarn install --frozen-lockfile
+      - run: corepack prepare yarn@stable --activate
+      - run: yarn install --immutable
       - run: yarn run buildESB
       - run: yarn run build
       - run: yarn run test:ci
