--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: "18.x"
       - run: corepack prepare yarn@stable --activate
+      - run: yarn set version stable
       - name: Use Node.js 18.x and cache
         uses: actions/setup-node@v3
         with:
