--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           name: build
           path: build/
-      - run: yarn run buildESB
+      # - run: yarn run buildESB
       
   deploy:
     needs: build
