--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@testing-library/react": "^13.4.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "@vitest/coverage-c8": "^0.27.0",
+    "esbuild": "^0.17.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
