--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_UPDATE_DATE="Sun Dec 18 11:32:44 EST 2022"
+VITE_REACT_APP_UPDATE_DATE="Wed Dec 14 06:26:51 EST 2022"
+VITE_API_URL_BASE="/"
