--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "simplify-geojson": "^1.0.3",
     "source-map-explorer": "^2.5.3",
     "vite": "^4.0.0",
-    "vitest": "^0.27.0"
+    "vitest": "0.27.2"
   },
   "packageManager": "yarn@3.3.1"
 }
