--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "@vitest/coverage-c8": "^0.28.0",
+    "@vitest/coverage-c8": "^0.28.4",
     "esbuild": "^0.17.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -50,7 +50,7 @@
     "simplify-geojson": "^1.0.3",
     "source-map-explorer": "^2.5.3",
     "vite": "^4.0.0",
-    "vitest": "0.28.3"
+    "vitest": "^0.28.4"
   },
   "packageManager": "yarn@3.4.1"
 }
