--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,10 +1,14 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ],
+  "extends": ["config:base"],
   "packageRules": [
     {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    },
+    {
+      "matchPackageNames": ["@vitest/coverage-c8","vitest"],
+      "groupName": "vitest",
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
       "automerge": true
     }
