adjust when lock maintenance happens

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,7 +15,8 @@
   ],
   "lockFileMaintenance": {
     "enabled": true,
-    "automerge": true
+    "automerge": true,
+    "schedule": "before 5am on saturday"
   },
   "timezone": "America/New_York",
   "schedule": "every weekend"
