--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,6 +11,12 @@
       "groupName": "vitest",
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
       "automerge": true
+    },
+    {
+      "matchPackagePrefixes": ["@deck.gl"],
+      "groupName": "deck.gl",
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
     }
   ],
   "lockFileMaintenance": {
