--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "rangeStrategy": "bump",
+  "major": { "rangeStrategy": "bump" },
+  "minor": { "rangeStrategy": "bump" },
   "packageRules": [
     {
       "groupName": "vitest",
@@ -17,7 +18,7 @@
     },
     {
       "groupName": "minors",
-      "matchUpdateTypes": ["minor", "patch"],
+      "matchUpdateTypes": ["minor"],
       "automerge": true
     }
   ],
