--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "major": { "rangeStrategy": "bump" },
-  "minor": { "rangeStrategy": "bump" },
+  "rangeStrategy": "bump",
   "packageRules": [
     {
       "groupName": "vitest",
@@ -20,6 +19,10 @@
       "groupName": "minors",
       "matchUpdateTypes": ["minor"],
       "automerge": true
+    },
+    {
+      "updateTypes": ["patch"],
+      "enabled": false
     }
   ],
   "lockFileMaintenance": {
