--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,10 @@
   "rangeStrategy": "bump",
   "packageRules": [
     {
+      "matchUpdateTypes": ["patch"],
+      "enabled": false
+    },
+    {
       "groupName": "vitest",
       "matchPackageNames": ["@vitest/coverage-c8", "vitest"],
       "matchUpdateTypes": ["minor"],
@@ -17,12 +21,8 @@
     },
     {
       "groupName": "minors",
-      "matchUpdateTypes": ["minor"],
+      "matchUpdateTypes": ["minor","patch"],
       "automerge": true
-    },
-    {
-      "matchUpdateTypes": ["patch"],
-      "enabled": false
     }
   ],
   "lockFileMaintenance": {
