--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,7 @@
   "rangeStrategy": "bump",
   "packageRules": [
     {
+      "matchManagers": ["npm"],
       "matchUpdateTypes": ["patch"],
       "enabled": false
     },
