--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@deck.gl/core": "^8.9.4",
     "@deck.gl/layers": "^8.9.4",
     "@deck.gl/mapbox": "^8.9.4",
@@ -28,7 +29,7 @@
     "build": "vite build",
     "buildESB": "esbuild src/index.jsx --outdir=dist --asset-names=\"assets/[name]-[hash]\" --bundle --minify --sourcemap --target=es2020 --external:react --analyze",
     "test": "vitest",
-    "test:ci": "CI=true yarn vitest",
+    "test:ci": "CI=true pnpm vitest",
     "bench": "vitest bench",
     "coverage": "vitest run --coverage"
   },
@@ -52,5 +53,5 @@
     "vite": "^4.2.1",
     "vitest": "^0.29.7"
   },
-  "packageManager": "yarn@3.5.0"
+  "packageManager": "pnpm@7.25.1"
 }
