--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -15,6 +15,8 @@ jobs:
     permissions: read-all
     steps:
       - uses: actions/checkout@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
       - name: Use Node.js 18.x and cache
         uses: actions/setup-node@v3
         with:
