--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "prettier": "^2.8.7",
     "simplify-geojson": "^1.0.5",
     "source-map-explorer": "^2.5.3",
-    "vite": "^4.2.1",
+    "vite": "^4.3.0-beta.3",
     "vitest": "^0.29.8"
   },
   "packageManager": "pnpm@8.1.1"
