--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@deck.gl/layers": "^8.9.16",
     "@deck.gl/mapbox": "^8.9.16",
     "@deck.gl/react": "^8.9.16",
+    "@observablehq/plot": "^0.6.7",
     "antd": "^5.5.1",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
