--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,9 +7,14 @@
       "groupName": "minors and patches",
       "matchUpdateTypes": ["minor", "patch", "lockFileMaintenance"],
       "automerge": true,
-      "schedule": "before 6am on sunday"
+      "schedule": "before 5am on sunday"
     }
   ],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true,
+    "schedule": "before 6am on sunday"
+  },
   "timezone": "America/New_York",
   "schedule": "every weekend"
 }
