--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "0.33.0",
     "esbuild": "^0.18.18",
     "eslint": "^8.46.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -51,7 +51,7 @@
     "simplify-geojson": "^1.0.5",
     "source-map-explorer": "^2.5.3",
     "vite": "^4.4.8",
-    "vitest": "^0.34.1"
+    "vitest": "^0.33.0"
   },
   "packageManager": "pnpm@8.6.11"
 }
