--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@deck.gl/layers": "^8.9.23",
     "@deck.gl/mapbox": "^8.9.23",
     "@deck.gl/react": "^8.9.23",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "antd": "^5.8.3",
     "class-variance-authority": "^0.7.0",
