--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/assets/*.js'",
     "start": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "buildESB": "./esbuild.mjs",
     "test": "vitest",
     "test:ci": "CI=true pnpm vitest",
@@ -44,6 +44,10 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.5.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "@vitest/coverage-v8": "0.33.0",
@@ -63,6 +67,7 @@
     "simplify-geojson": "^1.0.5",
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vitest": "^0.33.0"
   },
