--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "msw": "^1.2.3",
     "postcss": "^8.4.27",
     "prettier": "^3.0.1",
+    "rollup-plugin-visualizer": "^5.9.2",
     "simplify-geojson": "^1.0.5",
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.3.3",
