--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "@deck.gl/layers": "^8.9.23",
     "@deck.gl/mapbox": "^8.9.23",
     "@deck.gl/react": "^8.9.23",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "antd": "^5.8.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
+    "lucide-react": "^0.267.0",
     "mapbox-gl": "^2.15.0",
     "ml-regression-simple-linear": "^2.0.3",
     "papaparse": "^5.4.1",
@@ -21,12 +27,14 @@
     "react-map-gl": "^7.1.3",
     "react-router-dom": "^6.15.0",
     "recharts": "^2.7.3",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "temporal-polyfill": "^0.1.1"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/assets/*.js'",
     "start": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "buildESB": "./esbuild.mjs",
     "test": "vitest",
     "test:ci": "CI=true pnpm vitest",
@@ -35,9 +43,15 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/node": "^20.5.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "@vitest/coverage-v8": "0.33.0",
+    "autoprefixer": "^10.4.15",
     "esbuild": "^0.19.1",
     "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -48,9 +62,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.1.0",
     "msw": "^1.2.3",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.1",
+    "rollup-plugin-visualizer": "^5.9.2",
     "simplify-geojson": "^1.0.5",
     "source-map-explorer": "^2.5.3",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vitest": "^0.33.0"
   },
