--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install pnpm
         uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Use Node.js 20.x and cache
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
           cache: "pnpm"
-      - run: pnpm install --frozen-lockfile
+      - run: pnpm install
       - run: pnpm run build
       - run: pnpm run buildESB
       - run: pnpm run test:ci
