less space in the table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
-  "cSpell.words": ["antd", "CTYNAME", "datapoint", "mapbox", "papaparse", "pickable", "Scatterplot", "wireframe"],
+  "cSpell.words": [
+    "antd",
+    "Combobox",
+    "CTYNAME",
+    "datapoint",
+    "mapbox",
+    "papaparse",
+    "pickable",
+    "Scatterplot",
+    "wireframe"
+  ],
   "typescript.preferences.importModuleSpecifier": "non-relative",
   "javascript.preferences.importModuleSpecifier": "non-relative"
 }
