--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.10.7",
-    "antd": "^5.11.0",
+    "antd": "^5.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -28,15 +28,15 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
-    "react-router-dom": "^6.18.0",
-    "recharts": "^2.9.2",
+    "react-router-dom": "^6.19.0",
+    "recharts": "^2.9.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "temporal-polyfill": "^0.1.1"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/assets/*.js'",
-    "start": "vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "buildESB": "./esbuild.mjs",
     "test": "vitest",
@@ -45,18 +45,18 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.34",
-    "@types/react-dom": "^18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitejs/plugin-basic-ssl": "^1.0.1",
-    "@vitejs/plugin-react-swc": "^3.4.1",
+    "@testing-library/react": "^14.1.2",
+    "@types/node": "^20.9.1",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.2",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "0.34.6",
     "autoprefixer": "^10.4.16",
     "esbuild": "^0.19.5",
-    "eslint": "^8.53.0",
+    "eslint": "^8.54.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
@@ -65,13 +65,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "simplify-geojson": "^1.0.5",
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
+    "vite": "^5.0.0",
     "vitest": "^0.34.6"
   },
   "packageManager": "pnpm@8.10.2"
