Add checks on PR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - "main"
       - "renovate/**"
+  pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
 
 jobs:
   build:
