--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "test": "vitest",
     "test:ci": "CI=true pnpm vitest",
     "bench": "vitest bench",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "check": "eslint src"
   },
   "devDependencies": {
     "@testing-library/react": "^14.2.2",
@@ -64,6 +65,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "globals": "^15.0.0",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
@@ -72,6 +74,7 @@
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.4",
+    "typescript-eslint": "^7.5.0",
     "vite": "^5.2.8",
     "vitest": "^1.4.0"
   },
