--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "check": "eslint src"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20.13.0",
     "@types/react": "^18.3.3",
