--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,7 @@
 
 name: Node.js CI
 
-on:
-  push:
-    branches:
-      - "main"
-      - "renovate/**"
-  pull_request:
-    types:
-      - opened
-      - edited
-      - reopened
+on: [push]
 
 jobs:
   build:
