--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/assets/*.js'",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "buildESB": "./esbuild.mjs",
     "test": "vitest --pool=vmThreads",
     "test:ci": "CI=true pnpm vitest --pool=vmThreads",
