--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@deck.gl/react": "^9.0.17",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.17.3",
-    "antd": "^5.18.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -39,7 +39,7 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/assets/*.js'",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "buildESB": "./esbuild.mjs",
     "test": "vitest --pool=vmThreads",
     "test:ci": "CI=true pnpm vitest --pool=vmThreads",
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.1.0",
     "@testing-library/react": "^16.0.0",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
