--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm run buildESB
-      - run: pnpm run test:ci
+      - run: pnpm test
       - run: pnpm run check
         timeout-minutes: 5
       - name: Archive Build Outputs
