--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "check": "eslint src"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "4.0.0-beta.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^22.10.2",
@@ -58,7 +59,6 @@
     "@vitejs/plugin-basic-ssl": "^1.2.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "@vitest/coverage-v8": "2.1.8",
-    "autoprefixer": "^10.4.20",
     "esbuild": "^0.24.0",
     "eslint": "^9.17.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -75,7 +75,7 @@
     "rollup-plugin-visualizer": "^5.12.0",
     "simplify-geojson": "^1.0.5",
     "source-map-explorer": "^2.5.3",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "4.0.0-beta.7",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.0",
     "vite": "^6.0.3",
