--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tailwindcss/vite": "^4.0.3",
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,7 +33,7 @@
     "react-map-gl": "^7.1.8",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "temporal-polyfill": "^0.2.5"
   },
@@ -70,7 +71,6 @@
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "msw": "^2.7.0",
-    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "rollup-plugin-visualizer": "^5.13.1",
     "simplify-geojson": "^1.0.5",
