--- a/package.json
+++ b/package.json
@@ -80,5 +80,5 @@
     "vite": "^6.0.11",
     "vitest": "^3.0.4"
   },
-  "packageManager": "pnpm@9.15.3"
+  "packageManager": "pnpm@9.15.5+sha1.cb1f6372ef64e2ba352f2f46325adead1c99ff8f"
 }
