--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "check": "eslint src"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.13.1",
