--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@deck.gl/layers": "^9.1.12",
     "@deck.gl/mapbox": "^9.1.12",
     "@deck.gl/react": "^9.1.12",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
