--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "papaparse",
     "pickable",
     "Scatterplot",
+    "tabler",
     "wireframe"
   ],
   "typescript.preferences.importModuleSpecifier": "non-relative",
