--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
