--- a/package.json
+++ b/package.json
@@ -78,8 +78,13 @@
     "tailwindcss": "4.1.11",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0",
+    "vite": "npm:rolldown-vite@latest",
     "vitest": "^3.2.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite": "npm:rolldown-vite@latest"
+    }
   },
   "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
