--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-router": "^1.132.19",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/router-devtools": "^1.132.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -32,8 +34,6 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.1.1",
     "react-map-gl": "^8.0.4",
-    "@tanstack/react-router": "^1.132.17",
-    "@tanstack/router-devtools": "^1.132.17",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -53,12 +53,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tanstack/router-cli": "^1.132.19",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.18.6",
-    "@types/react": "^19.1.14",
+    "@types/react": "^19.1.15",
     "@types/react-dom": "^19.1.9",
-    "@tanstack/router-cli": "^1.132.17",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-basic-ssl": "^2.1.0",
@@ -82,7 +82,7 @@
     "tailwindcss": "4.1.13",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "npm:rolldown-vite@^7.1.13",
     "vitest": "^3.2.4"
   },
   "pnpm": {
