--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "test:ci": "CI=true vitest",
     "bench": "vitest bench",
     "coverage": "vitest run --coverage",
-    "check": "eslint src"
+    "check": "eslint src",
+    "type-check": "tsc --project . --noEmit"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
